--- a/task-list/style.css
+++ b/task-list/style.css
@@ -8,6 +8,7 @@
 }
 html {
     font-family: 'Inter';
+    margin: -10px;
 }
 .container {
     background-color: #FFFCE0;
@@ -70,36 +71,4 @@ html {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-}
-
-.button{
-    text-decoration: none;
-    color:#000020
-}
-
-@media (max-width: 500px) {
-
-    .header {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-    }
-
-    .logo-container {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .control-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .control-container .header-btn {
-        margin-bottom: 10pt;
-        width: 80%;
-        text-align: center;
-    }
 }
