--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap%27);
 .header {
     height: 80px;
-    background-color: #FFD600;   
-    
+    background-color: #FFD600;
+
     display: flex;
     justify-content: space-between;
 }
@@ -13,6 +13,7 @@ html {
 .container {
     background-color: #FFFCE0;
     height: calc(100vh - 80px);
+    display: flex;
 }
 
 .footer {
@@ -71,4 +72,9 @@ html {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+}
+
+.button{
+    text-decoration: none;
+    color:#000020
 }
